--- a/_config.yml
+++ b/_config.yml
@@ -194,6 +194,7 @@ exclude:
   - jekyll-text-theme.gemspec
   - package-lock.json
   - package.json
+  - /docs
   - /node_modules
   - /screenshots
   - /test
