--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
+url     : "https://limjunho.github.io" # the base hostname & protocol for your site e.g. https://www.someone.com
+baseurl : "/blog" # does not include hostname
 title   : limjunho 
 description: > # this means to ignore newlines until "Language & timezone"
   Your Site Description
@@ -34,11 +34,11 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : Your Name
-  url       :
+  name      : "Limjunho"
+  url       : "https://limjunho.github.io"
   avatar    : # path or url of avatar image (square)
   bio       : I am an amazing person.
-  email     :
+  email     : "jewel7492@gmail.com"
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
@@ -48,13 +48,13 @@ author:
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : limjunho # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : "limjunho" # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: limjunho/limjunho.github.io #user_name/repo_name
 repository_tree: master
 
 
@@ -212,6 +212,16 @@ defaults:
         toc: true
       show_edit_on_github: true
       show_subscribe: true
+      key: anything # 반드시 이 구문을 넣어야 disqus 댓글이 각 post 마다 실행됨
+      mode: immersive # 백그라운드 이미지 위에 헤더와 타이틀 올리기
+      header:
+        theme: dark # dark는 헤더의 배경을 어둡게 하고 글씨를 밝게함. light는 반대
+      article_header:
+        type: overlay # 포스트 내부에서 헤더 오버레이 적용여부
+        theme: dark
+        background_image: # 포스트 헤더 배경이미지 경로 및 그라데이션 설정
+          src: https://user-images.githubusercontent.com/59393359/74720914-e4b7e980-5279-11ea-9532-c262caf64f00.jpg
+          gradient: 'linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .0))'
       pageview: true
 
 
