--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night-bright # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : "https://limjunho.github.io" # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : "/blog" # does not include hostname
+baseurl : # does not include hostname
 title   : limjunho 
 description: > # this means to ignore newlines until "Language & timezone"
   Your Site Description
