--- a/_config.yml
+++ b/_config.yml
@@ -172,7 +172,7 @@ analytics:
 
   ## Google Analytics
   google:
-    tracking_id : 270140843 # Google Analytics id for the site
+    tracking_id : G-HC23922ECE # Google Analytics id for the site
     anonymize_ip: false # Anonymize IP tracking for Analytics
 
 
